--- a/part3/server/package.json
+++ b/part3/server/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.3"
+    "mongoose": "^6.5.4"
   },
   "type": "module"
 }
