--- a/part3/server/package.json
+++ b/part3/server/package.json
@@ -13,7 +13,10 @@
     "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.6.0",
     "jsonwebtoken": "8.5.1",
+    "uuid": "^8.3.2",
     "mongoose": "^6.5.4"
   },
   "type": "module"
